Order of copyright text changed.

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         </div>
 
                         <div class="footer__info">
-                            <div class="copyright">2022 &copy; Eric Duffield</div>
+                            <div class="copyright">Eric Duffield &copy; 2022</div>
                         </div>
 
                     </div>
