Updated CV and modified duffcoin link.

--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@
 
                                                 <div class="article__head">
 
-                                                    <a class="article__image" href="https://duffcoincrypto.com/">
+                                                    <a class="article__image"
+                                                        href="https://duffcoincrypto.netlify.app/">
                                                         <img class="" data-src="./Projects/DuffCoin/preview.png"
                                                             src="./Projects/DuffCoin/preview.png" alt="Duff Coin">
                                                     </a>
@@ -453,7 +454,7 @@
                                                     </div>
 
                                                     <h2 class="article__title">
-                                                        <a href="https://duffcoincrypto.com/">Duff
+                                                        <a href="https://duffcoincrypto.netlify.app/">Duff
                                                             Coin</a>
                                                     </h2>
 
@@ -468,7 +469,7 @@
                                                     <a class="readMore">Read more</a>
 
                                                     <div class="article__buttons">
-                                                        <a href="https://duffcoincrypto.com/">Website</a>
+                                                        <a href="https://duffcoincrypto.netlify.app/">Website</a>
                                                         <a href="https://github.com/ericduffield/DuffCoin">Github</a>
                                                     </div>
 
