Added portfolio manage project

--- a/index.html
+++ b/index.html
@@ -148,6 +148,56 @@
                                                 <div class="article__head">
 
                                                     <a class="article__image"
+                                                        href="https://portfoliomanagerapplication.netlify.app/">
+                                                        <img class="" data-src="./Projects/PortfolioManager/preview.jpg"
+                                                            src="./Projects/PortfolioManager/preview.jpg"
+                                                            alt="Portfolio Manager">
+                                                    </a>
+                                                </div>
+
+                                                <div class="article__content">
+
+                                                    <div class="article-tags__box">
+
+                                                        <p class="article__tag">trading</p>
+                                                        <p class="article__tag">web</p>
+                                                        <p class="article__tag">rest api</p>
+
+                                                    </div>
+
+                                                    <h2 class="article__title">
+                                                        <a href="https://portfoliomanagerapplication.netlify.app/">Portfolio
+                                                            Manager</a>
+                                                    </h2>
+
+                                                    <p class="article__excerpt">
+                                                        This is a portfolio manager web application that allows a
+                                                        user to view their portfolio in a graphical manner as well as
+                                                        trade
+                                                        by sending new orders. Flask and Python were used to create a
+                                                        REST
+                                                        API and information is stored in a MySQL database.
+                                                    </p>
+                                                    <a class="readMore">Read more</a>
+
+                                                    <div class="article__buttons">
+                                                        <a
+                                                            href="https://portfoliomanagerapplication.netlify.app/">Website</a>
+                                                        <a
+                                                            href="https://github.com/ericduffield/PortfolioManager">Github</a>
+                                                    </div>
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="article col col-4 col-d-6 col-t-12">
+                                            <div class="article__inner">
+
+                                                <div class="article__head">
+
+                                                    <a class="article__image"
                                                         href="https://github.com/ericduffield/Hue-Game">
                                                         <img class="" data-src="./Projects/Hue/preview.png"
                                                             src="./Projects/Hue/preview.png" alt="Hue Game">
@@ -232,52 +282,6 @@
                                                     <div class="article__buttons">
                                                         <a
                                                             href="https://github.com/ericduffield/Ski-Rental-Website">Github</a>
-                                                    </div>
-
-                                                </div>
-
-                                            </div>
-                                        </div>
-
-                                        <div class="article col col-4 col-d-6 col-t-12">
-                                            <div class="article__inner">
-
-                                                <div class="article__head">
-
-                                                    <a class="article__image" href="https://betterstake.netlify.app/">
-                                                        <img class="" data-src="./Projects/BetterStake/preview.jpg"
-                                                            src="./Projects/BetterStake/preview.jpg" alt="Duff Coin">
-                                                    </a>
-                                                </div>
-
-                                                <div class="article__content">
-
-                                                    <div class="article-tags__box">
-
-                                                        <p class="article__tag">web3</p>
-                                                        <p class="article__tag">cryptocurrency</p>
-                                                        <p class="article__tag">business</p>
-
-                                                    </div>
-
-                                                    <h2 class="article__title">
-                                                        <a href="https://betterstake.netlify.app/">BetterStake</a>
-                                                    </h2>
-
-                                                    <p class="article__excerpt">
-                                                        A friend and I came up with an idea for a cryptocurrency staking
-                                                        platform called <strong>BetterStake</strong>. This is a
-                                                        concept that never got off the ground, but I created a website
-                                                        as a concept for the idea. It features a portfolio
-                                                        dashboard where the user can view their assets as well as a
-                                                        table of cryptocurrencies displaying their balance, current
-                                                        price, and 24-hour change which are fetched from an API.
-                                                    </p>
-                                                    <a class="readMore">Read more</a>
-
-                                                    <div class="article__buttons">
-                                                        <a href="https://betterstake.netlify.app/">Website</a>
-                                                        <a href="https://github.com/ericduffield/BetterStake">Github</a>
                                                     </div>
 
                                                 </div>
@@ -388,6 +392,52 @@
 
                                                 <div class="article__head">
 
+                                                    <a class="article__image" href="https://betterstake.netlify.app/">
+                                                        <img class="" data-src="./Projects/BetterStake/preview.jpg"
+                                                            src="./Projects/BetterStake/preview.jpg" alt="Duff Coin">
+                                                    </a>
+                                                </div>
+
+                                                <div class="article__content">
+
+                                                    <div class="article-tags__box">
+
+                                                        <p class="article__tag">web3</p>
+                                                        <p class="article__tag">crypto</p>
+                                                        <p class="article__tag">business</p>
+
+                                                    </div>
+
+                                                    <h2 class="article__title">
+                                                        <a href="https://betterstake.netlify.app/">BetterStake</a>
+                                                    </h2>
+
+                                                    <p class="article__excerpt">
+                                                        A friend and I came up with an idea for a cryptocurrency staking
+                                                        platform called <strong>BetterStake</strong>. This is a
+                                                        concept that never got off the ground, but I created a website
+                                                        as a concept for the idea. It features a portfolio
+                                                        dashboard where the user can view their assets as well as a
+                                                        table of cryptocurrencies displaying their balance, current
+                                                        price, and 24-hour change which are fetched from an API.
+                                                    </p>
+                                                    <a class="readMore">Read more</a>
+
+                                                    <div class="article__buttons">
+                                                        <a href="https://betterstake.netlify.app/">Website</a>
+                                                        <a href="https://github.com/ericduffield/BetterStake">Github</a>
+                                                    </div>
+
+                                                </div>
+
+                                            </div>
+                                        </div>
+
+                                        <div class="article col col-4 col-d-6 col-t-12">
+                                            <div class="article__inner">
+
+                                                <div class="article__head">
+
                                                     <a class="article__image" href="https://ericduffield.com/">
                                                         <img class="" data-src="./Projects/Website/preview.jpg"
                                                             src="./Projects/Website/preview.jpg" alt="Personal Website">
@@ -448,7 +498,7 @@
                                                     <div class="article-tags__box">
 
                                                         <p class="article__tag">web3</p>
-                                                        <p class="article__tag">cryptocurrency</p>
+                                                        <p class="article__tag">crypto</p>
                                                         <p class="article__tag">NFT</p>
 
                                                     </div>
