Updated contact section and added new CV

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                         Computer Science part-time at Concordia
                                         University.
                                     </h3>
-                                    <a id="resume" href="./DuffieldEricCV2023.pdf" class="button button--primary"
+                                    <a id="resume" href="./DuffieldEricCV2025.pdf" class="button button--primary"
                                         target=”_blank”>My
                                         Resume</a>
                                 </div>
@@ -774,12 +774,19 @@
 
                 </div>
                 <!-- end pagination -->
+                <div class="container" id="contact">
+                    <h1>Contact</h1>
+                    <div>
+                        <i class="ion ion-md-mail"></i>
+                        ericalexanderduffield@gmail.com
+                    </div>
+                </div>
 
             </main>
             <!-- end content -->
 
             <!-- begin footer -->
-            <footer class="footer" id="contact">
+            <footer class="footer">
 
                 <div class="container">
                     <div class="row">
@@ -810,27 +817,13 @@
                                                 Website</a>
                                         </li>
 
-                                        <li class="social__item">
-                                            <a class="social__link" href="https://www.facebook.com/ericduffield0"
-                                                target="_blank" rel="noopener" aria-label="Facebook link"><i
-                                                    class="ion ion-logo-facebook" style="color: #3b5999;"></i>
-                                                Facebook</a>
-                                        </li>
-
-                                        <li class="social__item">
-                                            <a class="social__link" href="https://www.instagram.com/eric_duffield/"
-                                                target="_blank" rel="noopener" aria-label="Instagram link"><i
-                                                    class="ion ion-logo-instagram" style="color: #e4405f;"></i>
-                                                Instagram</a>
-                                        </li>
-
                                     </ul>
                                 </div>
 
                             </div>
 
                             <div class="footer__info">
-                                <div class="copyright">Eric Duffield &copy; 2023</div>
+                                <div class="copyright" id="copyright"></div>
                             </div>
 
                         </div>
