Updated CryptoCapys url, changed project order, updated CV

--- a/index.html
+++ b/index.html
@@ -294,10 +294,9 @@
 
                                                 <div class="article__head">
 
-                                                    <a class="article__image"
-                                                        href="https://jofflobster.itch.io/crime-and-punishment">
-                                                        <img class="" data-src="./Projects/C&PGame/preview.png"
-                                                            src="./Projects/C&PGame/preview.png" alt="C&P Game">
+                                                    <a class="article__image" href="https://cryptweets.netlify.app/">
+                                                        <img class="" data-src="./Projects/Cryptweets/preview.png"
+                                                            src="./Projects/Cryptweets/preview.png" alt="Cryptweets">
                                                     </a>
 
                                                 </div>
@@ -306,35 +305,30 @@
 
                                                     <div class="article-tags__box">
 
-                                                        <p class="article__tag">game</p>
-                                                        <p class="article__tag">unity</p>
-                                                        <p class="article__tag">team</p>
+                                                        <p class="article__tag">web3</p>
+                                                        <p class="article__tag">twitter</p>
+                                                        <p class="article__tag">NFT</p>
 
                                                     </div>
 
                                                     <h2 class="article__title">
-                                                        <a href="https://jofflobster.itch.io/crime-and-punishment">C&P
-                                                            Game</a>
+                                                        <a href="https://cryptweets.netlify.app/">Cryptweets</a>
                                                     </h2>
 
                                                     <p class="article__excerpt">
-                                                        A group of classmates and I created a game for an English class
-                                                        that depicts a scene in Fyodor Dostoevsky's Crime and
-                                                        Punishment. We created this game using C# and Unity. You play as
-                                                        the protagonist and must retrieve an axe and sneak into
-                                                        a pawnbroker's house without arousing suspicion. Once there you
-                                                        have to steal her jewelry and escape without getting
-                                                        caught.
+                                                        <strong>Cryptweets</strong> is an NFT project concept that was
+                                                        never released
+                                                        because of legal concerns. I wrote a script that queried
+                                                        the Twitter API for the latest and most popular tweets related
+                                                        to crypto. It then creates NFTs based on each tweet using
+                                                        their metadata. There are different tiers for each of the
+                                                        metrics depending on engagement.
                                                     </p>
                                                     <a class="readMore">Read more</a>
 
                                                     <div class="article__buttons">
-                                                        <a
-                                                            href="https://jofflobster.itch.io/crime-and-punishment">Play</a>
-                                                        <a
-                                                            href="https://github.com/jeffbrin/CrimeAndPunishmentGame">Github</a>
+                                                        <a href="https://cryptweets.netlify.app/">Website</a>
                                                     </div>
-
                                                 </div>
 
                                             </div>
@@ -533,7 +527,8 @@
 
                                                 <div class="article__head">
 
-                                                    <a class="article__image" href="https://cryptocapys.io/">
+                                                    <a class="article__image"
+                                                        href="https://cryptocapyswebsite.netlify.app/">
                                                         <img class="" data-src="./Projects/CryptoCapys/preview.png"
                                                             src="./Projects/CryptoCapys/preview.png" alt="CryptoCapys">
                                                     </a>
@@ -551,7 +546,8 @@
                                                     </div>
 
                                                     <h2 class="article__title">
-                                                        <a href="https://cryptocapys.io/">CryptoCapys</a>
+                                                        <a
+                                                            href="https://cryptocapyswebsite.netlify.app/">CryptoCapys</a>
                                                     </h2>
 
                                                     <p class="article__excerpt">
@@ -564,7 +560,7 @@
                                                     <a class="readMore">Read more</a>
 
                                                     <div class="article__buttons">
-                                                        <a href="https://cryptocapys.io/">Website</a>
+                                                        <a href="https://cryptocapyswebsite.netlify.app/">Website</a>
                                                     </div>
                                                 </div>
 
@@ -576,9 +572,10 @@
 
                                                 <div class="article__head">
 
-                                                    <a class="article__image" href="https://cryptweets.netlify.app/">
-                                                        <img class="" data-src="./Projects/Cryptweets/preview.png"
-                                                            src="./Projects/Cryptweets/preview.png" alt="Cryptweets">
+                                                    <a class="article__image"
+                                                        href="https://jofflobster.itch.io/crime-and-punishment">
+                                                        <img class="" data-src="./Projects/C&PGame/preview.png"
+                                                            src="./Projects/C&PGame/preview.png" alt="C&P Game">
                                                     </a>
 
                                                 </div>
@@ -587,30 +584,35 @@
 
                                                     <div class="article-tags__box">
 
-                                                        <p class="article__tag">web3</p>
-                                                        <p class="article__tag">twitter</p>
-                                                        <p class="article__tag">NFT</p>
+                                                        <p class="article__tag">game</p>
+                                                        <p class="article__tag">unity</p>
+                                                        <p class="article__tag">team</p>
 
                                                     </div>
 
                                                     <h2 class="article__title">
-                                                        <a href="https://cryptweets.netlify.app/">Cryptweets</a>
+                                                        <a href="https://jofflobster.itch.io/crime-and-punishment">C&P
+                                                            Game</a>
                                                     </h2>
 
                                                     <p class="article__excerpt">
-                                                        <strong>Cryptweets</strong> is an NFT project concept that was
-                                                        never released
-                                                        because of legal concerns. I wrote a script that queried
-                                                        the Twitter API for the latest and most popular tweets related
-                                                        to crypto. It then creates NFTs based on each tweet using
-                                                        their metadata. There are different tiers for each of the
-                                                        metrics depending on engagement.
+                                                        A group of classmates and I created a game for an English class
+                                                        that depicts a scene in Fyodor Dostoevsky's Crime and
+                                                        Punishment. We created this game using C# and Unity. You play as
+                                                        the protagonist and must retrieve an axe and sneak into
+                                                        a pawnbroker's house without arousing suspicion. Once there you
+                                                        have to steal her jewelry and escape without getting
+                                                        caught.
                                                     </p>
                                                     <a class="readMore">Read more</a>
 
                                                     <div class="article__buttons">
-                                                        <a href="https://cryptweets.netlify.app/">Website</a>
+                                                        <a
+                                                            href="https://jofflobster.itch.io/crime-and-punishment">Play</a>
+                                                        <a
+                                                            href="https://github.com/jeffbrin/CrimeAndPunishmentGame">Github</a>
                                                     </div>
+
                                                 </div>
 
                                             </div>
